cmake_minimum_required(VERSION 3.7)
project(Game-Engine)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES src/headers.h src/main.cpp src/texture.cpp src/texture.h src/shader.cpp src/shader.h src/mesh.cpp src/mesh.h src/camera.cpp src/camera.h src/font.cpp src/font.h src/definition.h src/model.cpp src/model.h src/controller.cpp src/controller.h src/screen.cpp src/screen.h src/gbuffer.cpp src/gbuffer.h src/skybox.cpp src/skybox.h src/definition.cpp src/shadow.cpp src/shadow.h src/object.cpp src/object.h src/ssao.cpp src/ssao.h src/water.cpp src/water.h src/particle.cpp src/particle.h src/game.cpp src/game.h)

add_executable(Game-Engine ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} glut)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} GLU)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} GLEW)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} GL)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} dl)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} X11)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Xrandr)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Xi)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Xxf86vm)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Xinerama)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Xcursor)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} SOIL)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} assimp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} freetype)